feat(core): migrate to forge_1.17.1