@@ -1,18 +1,18 @@
 package xin.vanilla.banira.client.gui.quickaction;
 
 import com.google.gson.JsonObject;
-import com.mojang.blaze3d.matrix.MatrixStack;
 import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
 import lombok.Getter;
 import lombok.experimental.Accessors;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.FontRenderer;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.screen.inventory.CreativeScreen;
-import net.minecraft.client.gui.screen.inventory.InventoryScreen;
-import net.minecraft.item.Items;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.text.StringTextComponent;
+import net.minecraft.client.gui.Font;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.gui.screens.inventory.CreativeModeInventoryScreen;
+import net.minecraft.client.gui.screens.inventory.InventoryScreen;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Items;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import org.apache.logging.log4j.LogManager;
@@ -36,7 +36,6 @@ import xin.vanilla.banira.common.util.Translator;
 import xin.vanilla.banira.internal.config.CustomConfig;
 
 import javax.annotation.Nullable;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -47,6 +46,7 @@ import java.util.List;
  */
 @OnlyIn(Dist.CLIENT)
 @Accessors(fluent = true)
+@SuppressWarnings("resource")
 public final class QuickActionOverlay {
 
     private static final Logger LOGGER = LogManager.getLogger();
@@ -218,7 +218,7 @@ public final class QuickActionOverlay {
             return;
         }
         try {
-            String raw = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            String raw = Files.readString(path);
             JsonObject o = JsonUtils.parseObject(raw);
             layout.fromJson(o);
             syncLayoutWithRegistry();
@@ -243,7 +243,7 @@ public final class QuickActionOverlay {
                 Files.createDirectories(dir);
                 Path path = dir.resolve(LAYOUT_FILE);
                 JsonObject o = layout.toJson();
-                Files.write(path, JsonUtils.toPrettyString(o).getBytes(StandardCharsets.UTF_8));
+                Files.writeString(path, JsonUtils.toPrettyString(o));
             } catch (Exception e) {
                 LOGGER.warn("Failed to save inventory quick-action layout: {}", e.getMessage());
             }
@@ -251,7 +251,7 @@ public final class QuickActionOverlay {
     }
 
     public static boolean isSupportedInventoryScreen(@Nullable Screen screen) {
-        return screen instanceof InventoryScreen || screen instanceof CreativeScreen;
+        return screen instanceof InventoryScreen || screen instanceof CreativeModeInventoryScreen;
     }
 
     /**
@@ -414,11 +414,10 @@ public final class QuickActionOverlay {
         RenderSystem.enableTexture();
         RenderSystem.enableBlend();
         RenderSystem.defaultBlendFunc();
-        RenderSystem.disableAlphaTest();
-        RenderSystem.color4f(1f, 1f, 1f, 1f);
+        RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
     }
 
-    private void drawSlotBorder(MatrixStack stack, int gx, int gy, int cell, int argbBorder) {
+    private void drawSlotBorder(PoseStack stack, int gx, int gy, int cell, int argbBorder) {
         int t = 1;
         AbstractGuiUtils.fill(stack, gx, gy, cell, t, argbBorder);
         AbstractGuiUtils.fill(stack, gx, gy + cell - t, cell, t, argbBorder);
@@ -429,7 +428,7 @@ public final class QuickActionOverlay {
     /**
      * 编辑模式下悬停用描边高亮，避免半透明底与 3D 物品混合导致物品消失
      */
-    private void drawEditModeSlotHoverOutline(MatrixStack stack, int gx, int gy, int cell, int accentRgb) {
+    private void drawEditModeSlotHoverOutline(PoseStack stack, int gx, int gy, int cell, int accentRgb) {
         int c = accentRgb | 0xFF000000;
         int inset = 1;
         int x0 = gx + inset;
@@ -630,7 +629,7 @@ public final class QuickActionOverlay {
         }
     }
 
-    public void render(MatrixStack stack, Screen screen, int mouseX, int mouseY, float partialTicks) {
+    public void render(PoseStack stack, Screen screen, int mouseX, int mouseY, float partialTicks) {
         if (!isSupportedInventoryScreen(screen)) {
             closeUi();
             return;
@@ -749,11 +748,10 @@ public final class QuickActionOverlay {
             renderContextMenu(stack, screen, mc, mouseX, mouseY, theme);
         }
 
-        RenderSystem.disableBlend();
         stack.popPose();
 
         if (contextTooltipLine != null && !contextTooltipLine.isEmpty()) {
-            screen.renderTooltip(stack, new StringTextComponent(contextTooltipLine), mouseX, mouseY);
+            screen.renderTooltip(stack, new TextComponent(contextTooltipLine), mouseX, mouseY);
         }
 
         renderQuickActionEntryIconTooltipIfHovered(stack, mc, mouseX, mouseY, theme);
@@ -762,7 +760,7 @@ public final class QuickActionOverlay {
     /**
      * 悬停于带 label 的快捷图标时，使用主题 Tooltip 样式绘制说明。
      */
-    private void renderQuickActionEntryIconTooltipIfHovered(MatrixStack stack, Minecraft mc, int mouseX, int mouseY, BaniraColorConfig theme) {
+    private void renderQuickActionEntryIconTooltipIfHovered(PoseStack stack, Minecraft mc, int mouseX, int mouseY, BaniraColorConfig theme) {
         if (contextOpen) {
             return;
         }
@@ -1298,19 +1296,19 @@ public final class QuickActionOverlay {
         layout.groupAnchor(DEFAULT.groupAnchor());
     }
 
-    private String ellipsizeText(FontRenderer font, String s, int maxW) {
+    private String ellipsizeText(Font font, String s, int maxW) {
         if (s == null || s.isEmpty()) {
             return "";
         }
-        if (font.width(new StringTextComponent(s)) <= maxW) {
+        if (font.width(s) <= maxW) {
             return s;
         }
         String ell = "...";
-        if (font.width(new StringTextComponent(ell)) > maxW) {
+        if (font.width(ell) > maxW) {
             return "";
         }
         String t = s;
-        while (!t.isEmpty() && font.width(new StringTextComponent(t + ell)) > maxW) {
+        while (!t.isEmpty() && font.width(t + ell) > maxW) {
             t = t.substring(0, t.length() - 1);
         }
         return t + ell;
@@ -1331,7 +1329,7 @@ public final class QuickActionOverlay {
         int innerPad = 3;
         int maxTextInner = 0;
         for (CtxRow r : rows) {
-            int tw = mc.font.width(new StringTextComponent(r.text));
+            int tw = mc.font.width(r.text);
             int rowW = r.menuIcon != null
                     ? MENU_TEXT_PAD_X + MENU_ICON_SIZE + MENU_ICON_GAP + tw + MENU_TEXT_PAD_X
                     : MENU_TEXT_PAD_X + tw + MENU_TEXT_PAD_X;
@@ -1354,7 +1352,7 @@ public final class QuickActionOverlay {
         contextScrollPx = Math.max(0, Math.min(ctxScrollMaxPx, contextScrollPx));
     }
 
-    private void renderContextMenu(MatrixStack stack, Screen screen, Minecraft mc, int mouseX, int mouseY, BaniraColorConfig theme) {
+    private void renderContextMenu(PoseStack stack, Screen screen, Minecraft mc, int mouseX, int mouseY, BaniraColorConfig theme) {
         List<CtxRow> rows = buildContextRows();
         layoutContextMenu(rows, mc);
 
@@ -1370,7 +1368,7 @@ public final class QuickActionOverlay {
         ShapeDrawArgs menuOutline = ShapeDrawArgs.rect(stack, x, y, w, h, borderArgb);
         menuOutline.rect().radius(CONTEXT_MENU_CORNER_RADIUS).cornerMode(ShapeDrawArgs.RoundedCornerMode.FINE).border(CONTEXT_MENU_BORDER_THICKNESS);
         BaseShapeWidget.drawShape(menuOutline);
-        // BaseShapeWidget / AbstractGuiUtils 圆角与描边会 disableBlend；后续滚动条、悬停底与物品图标需混合
+        // 圆角菜单绘制后需保证混合与 GUI 着色器可用（见 AbstractGuiUtils#restoreGuiRenderState）
         RenderSystem.enableTexture();
         RenderSystem.enableBlend();
         RenderSystem.defaultBlendFunc();
@@ -1389,7 +1387,7 @@ public final class QuickActionOverlay {
             AbstractGuiUtils.fill(stack, sbX + 1, thumbY, MENU_SCROLLBAR_W - 2, thumbH, accent);
         }
 
-        FontRenderer font = mc.font;
+        Font font = mc.font;
         for (int i = 0; i < rows.size(); i++) {
             int ry = innerTop + i * MENU_ROW_H - contextScrollPx;
             int rh = MENU_ROW_H;
@@ -1417,11 +1415,13 @@ public final class QuickActionOverlay {
                     ? x + MENU_TEXT_PAD_X + MENU_ICON_SIZE + MENU_ICON_GAP
                     : x + MENU_TEXT_PAD_X;
             float textY = ry + (MENU_ROW_H - font.lineHeight) / 2f;
-            font.draw(stack, new StringTextComponent(shown), textX, textY, textColor);
+            font.draw(stack, shown, textX, textY, textColor);
             if (hi && !shown.equals(full)) {
                 contextTooltipLine = full;
             }
         }
+
+        AbstractGuiUtils.restoreGuiRenderState();
 
         contextX = x;
         contextY = y;
